--- a/examples/galerie_shape_basic/css/example.css
+++ b/examples/galerie_shape_basic/css/example.css
@@ -1,25 +1,5 @@
 body{
   background: transparent url(background.png);
-  margin:0px;
+  margin:0;
 }
 
-
-#inputbox{
- border:1px solid white;
- border-radius:10px;
- background-color: #3b3b3b;
- color:#f3f3f3;
- position:absolute;
- padding:20px;
- top:10px; 
- left:10px
-}
-
-
-.shadow {
- -moz-box-shadow: 3px 3px 4px #000;
- -webkit-box-shadow: 3px 3px 4px #000;
- box-shadow: 3px 3px 4px #000;
- -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000')";
- filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000');
-}
